--- a/src/App.module.css
+++ b/src/App.module.css
@@ -2,3 +2,12 @@
   display: flex;
   margin-left: 360px;
 }
+
+.beforeUpload {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  text-align: center;
+  width: 100%;
+}
