--- a/src/projects/File/File.module.css
+++ b/src/projects/File/File.module.css
@@ -107,10 +107,13 @@
 
 .dlIconButton {
   position: relative;
-  width: 20px;
-  height: 20px;
+  width: 24px;
+  height: 24px;
   border-radius: 50%;
   margin: 0 8px;
+}
+.dlIconButton:hover {
+  background: rgba(255, 255, 255, 0.2);
 }
 
 .dlIconButton div {
@@ -120,6 +123,7 @@
 
 .dlIcon {
   font-size: 16px;
+  border-left: solid 1px #777;
 }
 
 .noItem {
