--- a/src/projects/Workspace/Scale.module.css
+++ b/src/projects/Workspace/Scale.module.css
@@ -12,6 +12,10 @@
   position: relative;
 }
 
+.wrap:last-child {
+  margin-right: 20px;
+  border-right: solid #777;
+}
 .bar {
   border-left: solid #eee;
   width: 25%;
