--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,12 @@
   box-sizing: border-box;
 }
 
+:root {
+  --bg: #0d1117;
+  --elevate: rgba(255, 255, 255, 0.2);
+  --textColor: #eee;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -9,8 +15,8 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: #0d1117;
-  color: #eee;
+  background-color: var(--bg);
+  color: var(--textColor);
 }
 
 code {
