--- a/src/projects/Workspace/Draggable/WsItem.module.css
+++ b/src/projects/Workspace/Draggable/WsItem.module.css
@@ -1,5 +1,5 @@
 .video {
-  height: 20px;
+  height: 40px;
   position: absolute;
   transition: all 0.1s ease-in-out;
 }
@@ -8,5 +8,17 @@
   text-overflow: ellipsis;
   white-space: nowrap;
   height: 40px;
+  line-height: 30px;
   overflow: hidden;
+  padding: 0 8px;
+  border: solid 1px;
+}
+
+.dragging {
+  transform: rotate(-2deg);
+  border: dashed 1px;
+}
+
+.alpha {
+  opacity: 0.8;
 }
