--- a/src/projects/Workspace/Workspace.module.css
+++ b/src/projects/Workspace/Workspace.module.css
@@ -4,8 +4,21 @@
 }
 
 .videoArea {
-  height: 30px;
+  height: 50px;
   position: relative;
+  border: solid 2px transparent;
+}
+.videoCanDrop {
+  border: solid 2px #333;
+  background-size: auto auto;
+  background-color: rgba(255, 255, 255, 1);
+  background-image: repeating-linear-gradient(
+    135deg,
+    transparent,
+    transparent 4px,
+    rgba(87, 84, 84, 1) 4px,
+    rgba(87, 84, 84, 1) 10px
+  );
 }
 
 .scroll {
