--- a/src/projects/Workspace/Workspace.module.css
+++ b/src/projects/Workspace/Workspace.module.css
@@ -28,6 +28,22 @@
   height: 200px;
 }
 
+.scroll::-webkit-scrollbar {
+  width: 8px;
+  height: 8px;
+}
+
+.scroll::-webkit-scrollbar-track {
+  background-color: #777;
+  border-radius: 4px;
+}
+
+.scroll::-webkit-scrollbar-thumb {
+  background-color: #111;
+  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  border-radius: 4px;
+}
+
 .scrollLeft {
   width: 200px;
   min-width: 200px;
@@ -41,4 +57,23 @@
   width: fit-content;
   min-width: calc(100% - 300px);
   margin-left: 20px;
+  position: relative;
+}
+
+.timeIndicator {
+  position: absolute;
+  background: #007bff;
+  top: 12px;
+  bottom: 0;
+  width: 2px;
+  margin-left: 2px;
+}
+
+.triangle {
+  width: 0;
+  height: 0;
+  border-style: solid;
+  border-width: 8px 8px 0 8px;
+  border-color: #007bff transparent transparent transparent;
+  transform: translateX(-7px);
 }
