--- a/src/Components/Projects/Workspace/Scale.module.css
+++ b/src/Components/Projects/Workspace/Scale.module.css
@@ -1,9 +1,15 @@
 .container {
   display: flex;
   width: fit-content;
+  min-width: 100%;
   font-size: 12px;
   border-bottom: solid #eee;
   margin-left: 2px;
+  position: sticky;
+  top: 0;
+  z-index: 1;
+  background: #112;
+  padding-left: 20px;
 }
 
 .wrap {
